--- a/templates/academy_admin/partner_detail.html
+++ b/templates/academy_admin/partner_detail.html
@@ -4,7 +4,7 @@
 {% block subcontent %}
     <p></p>
 
-    <form method="post" enctype="multipart/form-data" action="{% url 'academy_admin:partner_detail' partner.pk %}">
+    <form method="post" enctype="multipart/form-data" action="{{ partner.get_admin_url }}">
         {% csrf_token %}
         {{ update_partner_form.as_p }}
         <button type="submit">Save</button>
